Replace DC text with CT

--- a/app/assets/javascripts/qle.js.erb
+++ b/app/assets/javascripts/qle.js.erb
@@ -95,13 +95,13 @@ $(function () {
   $(document).on('click', 'a.qle-menu-item', function() {
     init_qle_message();
     $('#qle_flow_info #qle-menu').hide();
-    
+
     if($(this).data('reason') == 'covid-19'){
       $('.qle-details-title').html("<u>"+$(this).data('title')+"</u>");
     } else {
       $('.qle-details-title').html($(this).data('title'));
     }
-    
+
     $('.qle-label').html($(this).data('label'));
     $('#change_plan').val($(this).data('title'));
     $('#qle_id').val($(this).data('id'));
@@ -199,7 +199,7 @@ $(function () {
       get_qle_date();
     } else {
       $('#qle_reason').hide();
-      var errorNoticeAction = "Based on the information you have provided, you are not eligible for this special enrollment period. If you have questions or would like to provide additional information, please contact DC Health Link customer service at (855) 532-5465.";
+      var errorNoticeAction = "Based on the information you have provided, you are not eligible for this special enrollment period. If you have questions or would like to provide additional information, please contact Access Health CT customer service at (855) 532-5465.";
       $("#qle-details .error-text").html(errorNoticeAction);
       $('#qle-details .error-info').removeClass('hidden');
     }
