--- a/app/assets/stylesheets/custom.scss.erb
+++ b/app/assets/stylesheets/custom.scss.erb
@@ -1,10 +1,11 @@
 @import "variables";
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:300,400,700');
 /* Layout Specifics */
 html {
   height: 100%;
 }
 * {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto Slab', sans-serif;
 }
 
 body {
