--- a/app/views/notices/shared/footer_ivl.html.erb
+++ b/app/views/notices/shared/footer_ivl.html.erb
@@ -52,7 +52,7 @@
     </tr>
     <tr>
       <td style="padding:3px 10px; font-size:8px;" align="center">Questions?
-        Call DC Health Link at <%= notice.is_a?(Notifier::NoticeKind) ? Settings.contact_center.short_number : notice.hbe.phone%>, or go to www.dchealthlink.com.
+        Call Access Health CT at <%= notice.is_a?(Notifier::NoticeKind) ? Settings.contact_center.short_number : notice.hbe.phone%>, or go to www.dchealthlink.com.
       </td>
     </tr>
   </table>
