--- a/app/views/notices/shared/header_for_documents.html.erb
+++ b/app/views/notices/shared/header_for_documents.html.erb
@@ -31,7 +31,7 @@
               continue;
             }
           }
-        y[j].textContent = "Your DC Health Link ID is: <%= recipient.hbx_id %>" + "| Page "+(vars[x[i]])+ " of " + (vars[x[1]]);
+        y[j].textContent = "Your Access Health CT ID is: <%= recipient.hbx_id %>" + "| Page "+(vars[x[i]])+ " of " + (vars[x[1]]);
         }
       }
     }
