--- a/app/javascript/css/main.scss
+++ b/app/javascript/css/main.scss
@@ -1,6 +1,16 @@
 @import 'variables';
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
 
+.ct-cover, #ct-cover {
+  display: block;
+  max-width:100%;
+  max-height:100%;
+  margin-top:30px;
+  margin-left:auto;
+  margin-right:auto;
+  border: 1px solid #F0592A;
+}
+
 body {
   background-color: $medium-gray;
   -webkit-font-smoothing: antialiased;
