--- a/app/views/insured/families/_enrollment.html.erb
+++ b/app/views/insured/families/_enrollment.html.erb
@@ -187,7 +187,7 @@
         <i class="fa fa-phone fa-2x"></i>
         <span class="col-xs-11 enrollment-tile-summary"><%= l10n(".plan_contact_info") %></span>
       </a>
-        <%= render partial: "shared/#{Settings.aca.state_abbreviation.downcase}_carrier_contact_information", locals: { plan: product, hbx_enrollment: hbx_enrollment } unless product.issuer_profile.blank? %>
+        <%= render partial: "shared/carrier_contact_information", locals: { plan: product, hbx_enrollment: hbx_enrollment } unless product.issuer_profile.blank? %>
     </div>
     <% if !read_only == true %>
       <div class="col-lg-3">
