Fixed aca_state_abbreviation conditions

--- a/components/sponsored_benefits/app/views/sponsored_benefits/organizations/plan_design_proposals/shared/_proposal_info_readonly.html.erb
+++ b/components/sponsored_benefits/app/views/sponsored_benefits/organizations/plan_design_proposals/shared/_proposal_info_readonly.html.erb
@@ -22,7 +22,7 @@
 
       <br />
 
-      <% unless aca_state_abbreviation == 'DC' %>
+      <% if aca_state_abbreviation == 'MA' %>
 
         <div class="col-md-4 col-md-4 col-xs-12 form-group form-group-lg no-pd">
           <h4>SIC Code</h4>
