--- a/components/sponsored_benefits/app/views/sponsored_benefits/organizations/plan_design_organizations/new.html.erb
+++ b/components/sponsored_benefits/app/views/sponsored_benefits/organizations/plan_design_organizations/new.html.erb
@@ -5,7 +5,7 @@
         <h3>Add Prospect Employer</h3>
       </div>
       <div class="row">
-        <% if aca_state_abbreviation == 'DC' %>
+        <% if aca_state_abbreviation != 'MA' %>
           <p>Fill in the information below to create an employer record for this prospect.You only need to provide a legal name at this point, however any information you do not enter here will need to be populated later, or by the employer prior to claiming a quote. In addition, the 'State' drop down field defaults to DC, but should allow brokers to select from the normal state list if they choose. <br /><br />Once you have created the Prospective Employer record, you can create and manage quotes for this prospect from your Employers page.</p>
 
         <% else %>
