--- a/app/views/insured/employee_roles/search.html.slim
+++ b/app/views/insured/employee_roles/search.html.slim
@@ -7,6 +7,7 @@
         .col-lg-7.col-md-7.col-sm-8.col-xs-12
           h3.heading-text 
             = l10n("personal_information")
+            p.memo
           = render 'remote_search_form', f: f
         .col-lg-3.col-md-3.col-sm-3.col-xs-12.col-md-offset-2.col-sm-offset-1.right-section
           = render  partial: 'shared/signup_progress', locals: {step: '1'}
