refs # Admin SEPS, send audit params in hidden field.

--- a/app/views/exchanges/manage_sep_types/edit.html.erb
+++ b/app/views/exchanges/manage_sep_types/edit.html.erb
@@ -72,6 +72,9 @@
         <div class="form-group">
           <div class="col-sm-offset-2 col-sm-10">
             <% if @qle.draft %>
+              <%= f.hidden_field :published_by, value: current_user.id %>
+              <%= f.hidden_field :created_by, value: current_user.id %>
+              <%= f.hidden_field :updated_by, value: '' %>
               <%= f.submit l10n("exchange.manage_sep_types.update_sep_types"), class:'btn btn-outline-primary' %>
               <%= f.submit l10n('exchange.manage_sep_types.publish'), name: (f&.object_name.to_s + "[publish]"), value: l10n('exchange.manage_sep_types.publish'), class:'btn btn-outline-primary' %>
             <% end %>
