--- a/app/views/exchanges/manage_sep_types/_expire.html.erb
+++ b/app/views/exchanges/manage_sep_types/_expire.html.erb
@@ -29,6 +29,7 @@
       <tr>
         <td colspan = "6">
           <span class="btn btn-default" onclick="$('tr.child-row:visible').remove();">Cancel</span>&nbsp;&nbsp;&nbsp;
+          <%= f.hidden_field :updated_by, value: current_user.id %>
           <%= f.submit l10n("exchange.manage_sep_types.expire"), :class => "btn btn-primary"%>
         </td>
       </tr>
