--- a/app/views/exchanges/manage_sep_types/new.html.erb
+++ b/app/views/exchanges/manage_sep_types/new.html.erb
@@ -67,6 +67,9 @@
       </div>
       <div class="form-group <%=pundit_class(QualifyingLifeEventKind, :can_manage_qles?)%>">
         <div class="col-sm-offset-2 col-sm-10">
+          <%= f.hidden_field :created_by, value: current_user.id %>
+          <%= f.hidden_field :updated_by, value: '' %>
+          <%= f.hidden_field :published_by, value: '' %>
           <%= f.submit l10n("exchange.manage_sep_types.create_draft"), class:"btn btn-outline-primary" %>
           <%= link_to l10n("exchange.manage_sep_types.cancel"), sep_types_dt_exchanges_manage_sep_types_path, class: 'btn btn-outline-primary' %>
         </div>
