--- a/app/views/insured/family_members/edit.js.erb
+++ b/app/views/insured/family_members/edit.js.erb
@@ -14,6 +14,7 @@ $("#add_member_list_<%= @dependent.id %>").replaceWith("<%= escape_javascript(re
 
 $("#add_member_list_<%= @dependent.id %>").attr('data-confirm', '');
 $("#dependent_buttons").addClass('hidden');
+$("select").selectric();
 semantic_class();
 applyJQDatePickers();
 demographicValidations();
