refs #90396 added error message for dependents

--- a/app/views/insured/family_members/_dependent_form.html.erb
+++ b/app/views/insured/family_members/_dependent_form.html.erb
@@ -6,6 +6,7 @@
       <%= hidden_field_tag :consumer_role_id, params[:consumer_role_id] %>
       <%= hidden_field_tag :employee_role_id, params[:employee_role_id] %>
 
+      <p class="memo"></p>
       <% if dependent.errors.any? %>
         <div class="alert alert-error">
           <h4>
