refs #90396 dependent multiple error fix

--- a/app/views/insured/family_members/_dependent_resident_form.html.erb
+++ b/app/views/insured/family_members/_dependent_resident_form.html.erb
@@ -15,7 +15,8 @@
           </ul>
         </div>
       <% end %>
-
+      
+      <p class="dependent-invalid-dob"></p>
       <% if @address_errors.present? %>
         <%= render partial: 'shared/address_error_messages', locals: {address_errors: @address_errors} %>
       <% end %>
