initial commit - personal info page

--- a/app/assets/stylesheets/custom.scss.erb
+++ b/app/assets/stylesheets/custom.scss.erb
@@ -4949,3 +4949,25 @@ input:required:valid {
 .text-success {
   color: #69a30d !important;
 }
+
+.fa-user-circle {
+  color: #23527c;
+}
+
+.menu-list {
+  li {
+    text-align: right !important;
+  }
+}
+
+.personal-info-container {
+  max-width: 1000px;
+}
+
+.personal-info-hr {
+  border: 1px solid #ddd;
+}
+
+.red-star {
+  color: red;
+}
