--- a/app/views/shared/_my_portal_links.html.erb
+++ b/app/views/shared/_my_portal_links.html.erb
@@ -6,59 +6,55 @@
 <% roles = [insured] %>
 <% portal_count = roles.select{|role|role}.count + employer_staff.count + broker_staff_roles.count + ga_staff_roles.count%>
 
-  <% if portal_count == 1 %>
-    <span>
-      <%= link_to l10n(".my_insured_portal"), main_app.family_account_path(tab: 'home'), class: 'header-text' if insured %>
-      <%= link_to l10n('.my_employer_portal'), benefit_sponsors.new_profiles_registration_path(:profile_type => :benefit_sponsor), class: 'header-text' if employer_staff.present? %>
-      <%= link_to l10n('.my_broker_agency_portal'), benefit_sponsors.new_profiles_registration_path(:profile_type => :broker_agency), class: 'header-text' if broker_staff_roles.any? %>
-      <%= link_to l10n('.my_general_agency_portal'), benefit_sponsors.profiles_general_agencies_general_agency_profile_path(ga_staff_roles.first.general_agency_profile, tab:'home'), class: 'header-text' if ga_staff_roles.any? %>
-      <span> | </span>
-    </span>
+<span>
+ <i class="far fa-user-circle fa-lg" aria-hidden="true"></i>&nbsp;<a href="#" class="dropdown-toggle" id="dropdownMenuLink"  data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" onclick="myFunction()" ><strong><%= user_first_name_last_name_and_suffix %></strong></a>
+
+  <ul class="dropdown-menu menu-list" aria-labelledby="dropdownMenuLink">
+    <% if current_user.person.present? %>
+      <li><%= link_to 'Manage Account', main_app.manage_account_person_path(id: current_user&.person.id), class: 'dropdown-item'  unless current_user.person.hbx_staff_role %></li>
+    <% end %>
+
+    <% if portal_count == 1 %>
+      <li><%= link_to l10n(".my_insured_portal"), main_app.family_account_path(tab: 'home'), class: 'dropdown-item' if insured %> </li>
+      <li><%= link_to l10n('.my_employer_portal'), benefit_sponsors.new_profiles_registration_path(:profile_type => :benefit_sponsor), class: 'dropdown-item' if employer_staff.present? %> </li>
+      <li><%= link_to l10n('.my_broker_agency_portal'), benefit_sponsors.new_profiles_registration_path(:profile_type => :broker_agency), class: 'dropdown-item' if broker_staff_roles.any? %> </li>
+      <li><%= link_to l10n('.my_general_agency_portal'), benefit_sponsors.profiles_general_agencies_general_agency_profile_path(ga_staff_roles.first.general_agency_profile, tab:'home'), class: 'dropdown-item' if ga_staff_roles.any? %> </li>
     <%elsif portal_count > 1 %>
-      <span>
-        <a href="#" class="dropdown-toggle header-text" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Portals <span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <% if current_user.hints == true %>
-            <li>
-              <i class="fa fa-question-circle fa-3x text-center" aria-hidden="true" style="display: block;"></i>
-              <h3 class="darkblue no-buffer text-center">Did You Know?</h3>
-                <div class="panel panel-default">
-                  <div class="panel-body">You can move between your insured, employer, broker accounts using this My Portals link.</div>
-                </div>
-            </li>
-          <% end %>
-          <% if insured %>
-            <li><%= link_to l10n('.my_insured_portal'), main_app.family_account_path(tab: 'home'), class: 'header-text' %></li>
-          <% end %>
-          <% employer_staff.each do |employer_staff_role|  %>
-            <% id = employer_staff_role.benefit_sponsor_employer_profile_id %>
-              <% employer = BenefitSponsors::Organizations::Profile.find(id) %>
-              <li><%= link_to employer.organization.legal_name, benefit_sponsors.profiles_employers_employer_profile_path(employer, tab: 'home'), class: 'header-text' %></li>
-          <% end %>
-          <% broker_staff_roles.each do |broker_staff_role| %>
-            <%profile = broker_staff_role.broker_agency_profile%>
 
-            <% if profile.is_a? BenefitSponsors::Organizations::BrokerAgencyProfile %>
-              <% broker_link = benefit_sponsors.profiles_broker_agencies_broker_agency_profile_path(profile, tab:'home') %>
-            <% else %>
-              <% #backwards compatibility with old model %>
-              <% broker_link =  main_app.broker_agencies_profile_path(profile) %>
-            <% end %>
+      <% if insured %>
+        <li><%= link_to l10n('.my_insured_portal'), main_app.family_account_path(tab: 'home'), class: 'dropdown-item' %></li>
+      <% end %>
 
-            <li style="text-align:left"><%= link_to profile.legal_name, broker_link, class: 'header-text' %></li>
-          <% end %>
-          <% ga_staff_roles.each do |ga_staff_role| %>
-            <%profile = ga_staff_role.general_agency_profile%>
+      <% employer_staff.each do |employer_staff_role|  %>
+        <% id = employer_staff_role.benefit_sponsor_employer_profile_id %>
+        <% employer = BenefitSponsors::Organizations::Profile.find(id) %>
+        <li><%= link_to employer.organization.legal_name, benefit_sponsors.profiles_employers_employer_profile_path(employer, tab: 'home'), class: 'dropdown-item' %></li>
+      <% end %>
 
-            <% if profile.is_a? BenefitSponsors::Organizations::GeneralAgencyProfile %>
-              <% ga_link = benefit_sponsors.profiles_general_agencies_general_agency_profile_path(profile, tab:'home') %>
-            <% else %>
-              <% ga_link =  main_app.general_agencies_profile_path(profile) %>
-            <% end %>
+      <% broker_staff_roles.each do |broker_staff_role| %>
+        <%profile = broker_staff_role.broker_agency_profile%>
+        <% if profile.is_a? BenefitSponsors::Organizations::BrokerAgencyProfile %>
+          <% broker_link = benefit_sponsors.profiles_broker_agencies_broker_agency_profile_path(profile, tab:'home') %>
+        <% else %>
+          <% #backwards compatibility with old model %>
+          <% broker_link =  main_app.broker_agencies_profile_path(profile) %>
+        <% end %>
+        <li><%= link_to profile.legal_name, broker_link, class: 'dropdown-item' %></li>
+      <% end %>
 
-            <li style="text-align:left"><%= link_to profile.legal_name, ga_link, class: 'header-text' %></li>
-          <% end %>
-        </ul>
-        <span> | </span>
-      </span>
-  <% end %>
+      <% ga_staff_roles.each do |ga_staff_role| %>
+        <%profile = ga_staff_role.general_agency_profile%>
+        <% if profile.is_a? BenefitSponsors::Organizations::GeneralAgencyProfile %>
+          <% ga_link = benefit_sponsors.profiles_general_agencies_general_agency_profile_path(profile, tab:'home') %>
+        <% else %>
+          <% ga_link =  main_app.general_agencies_profile_path(profile) %>
+        <% end %>
+
+        <li><%= link_to profile.legal_name, ga_link, class: 'dropdown-item' %></li>
+      <% end %>
+    <% end %>
+
+    <li><%= link_to l10n(".help"), Settings.site.help_url, target: '_blank', class: 'dropdown-item' %></li>
+    <li><%= link_to l10n(".logout"), main_app.destroy_user_session_path, method: "delete", class: "dropdown-item" %></li>
+  </ul>
+</span>
