--- a/app/assets/stylesheets/custom.scss.erb
+++ b/app/assets/stylesheets/custom.scss.erb
@@ -4971,3 +4971,15 @@ input:required:valid {
 .red-star {
   color: red;
 }
+
+.personal-info-label {
+  font-size: 11px;
+  font-weight: bold;
+  color: rgb(131, 135, 128)
+}
+
+.personal-info-heading {
+  font-size: 16px;
+  font-weight: bold;
+  color: rgb(131, 135, 128)
+}
