add flash message on update of person info and add my portals UI page

--- a/app/javascript/css/variables.scss
+++ b/app/javascript/css/variables.scss
@@ -15,3 +15,6 @@ $dc-alt-blue: #007BC4;
 $dc-alt-gray: #d7d7d7;
 $dc-alt-gray-2: #b7b7b7;
 $medium-gray: #f2f2f2;
+$mhc-dark-blue:#003260;
+$primary-orange: #333333;
+$primary-blue: #007bc4;
