--- a/app/views/portals/_available_portals.html.erb
+++ b/app/views/portals/_available_portals.html.erb
@@ -7,7 +7,7 @@
         <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et aliqua..</p>
       </div>
       <div class="col-2 p-3">
-        <button class="btn btn-outline-primary pull-right mt-3">Add Portal</button>
+        <%= link_to "Add Portal", "#" , class: "btn btn-outline-primary pull-right mt-3" %>
       </div>
     </div>
   </div>
