--- a/app/javascript/css/custom.scss
+++ b/app/javascript/css/custom.scss
@@ -1,7 +1,5 @@
-@import "variables";
-
 #uic-families-right-menu, #uic-employers-right-menu {
-  background-color:$mhc-dark-blue;
+  background-color: #007bc4;
   padding: 20px 0;
   list-style-type: none;
 
@@ -22,7 +20,7 @@
     background-color: transparent;
   }
   .badge {
-    background-color:$primary-orange;
+    background-color: $primary-orange;
   }
   .panel {
     border-radius: 0;
@@ -110,4 +108,8 @@
 .portal-label {
   margin-left: 5px;
   font-size: 14px
+}
+
+.fade.in {
+  opacity: 1;
 }
