--- a/app/views/layouts/bootstrap_4_two_column.html.erb
+++ b/app/views/layouts/bootstrap_4_two_column.html.erb
@@ -8,7 +8,7 @@
 
     <title><%= content_for?(:title) ? yield(:title) : "Welcome to #{site_short_name} | #{site_short_name}" %></title>
     <%= javascript_pack_tag 'application' %>
-    <%= stylesheet_link_tag 'bootstrap_4' %>
+    <%= stylesheet_pack_tag 'application' %>
     <%= csrf_meta_tags %>
 
     <link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
