add employer registration form

--- a/app/javascript/css/main.scss
+++ b/app/javascript/css/main.scss
@@ -23,6 +23,11 @@ body {
   overflow-y: auto;
 }
 
+.nm-content-1 {
+  height: calc(100vh - 130px);
+  overflow-y: auto;
+}
+
 footer {
   font-size: 14px;
   color: $white;
