--- a/app/javascript/css/variables.scss
+++ b/app/javascript/css/variables.scss
@@ -18,3 +18,9 @@ $medium-gray: #f2f2f2;
 $mhc-dark-blue:#003260;
 $primary-orange: #333333;
 $primary-blue: #007bc4;
+$primary-bold: 600;
+
+$secondary-button-text: $primary-blue;
+$secondary-button-background: transparent;
+$secondary-button-border: $primary-blue;
+$secondary-button-text-casing: capitalize;
