--- a/app/views/portals/new.html.erb
+++ b/app/views/portals/new.html.erb
@@ -4,7 +4,7 @@
 
 <div class="documents-tab" style="padding-top: 0px !important;">
   <div class=" container personal-info-container no-pd">
-    <%= form_for @agency, as: :agency, url: {action: "create"},  html: { class: "needs-validation s508", novalidate:true } do |f| %>
+    <%= form_for @agency, as: :agency, url: {action: "create"},  html: { class: "needs-ajax-validation s508", novalidate:true } do |f| %>
       <%= render partial: 'portals/profile_form', locals: {f: f} %>
     <% end %>
   </div>
@@ -12,5 +12,5 @@
 </div>
 
 <script type="text/javascript">
-  validateForm();
+  validateAjaxForm();
 </script>
