refs #90183 hiding the div for coverall

--- a/app/views/insured/group_selection/_coverage_household.html.erb
+++ b/app/views/insured/group_selection/_coverage_household.html.erb
@@ -32,8 +32,12 @@
             <td class='<%= "dental_errors_#{employee_role.id}" %>'><%= l10n("insured.group_selection.coverage_household_ineligible_coverage", coverage_kind: @coverage_kind)  if !is_dental_coverage && !is_dental_coverage.nil? %></td>
           <% end %>
 
-          <td class="ivl_errors"><%= raw(errors.join(', ')) if errors.present? %></td>
-        </tr>
+          <td class="ivl_errors">
+           <% if errors.present? %>
+             <div><%= raw(errors.join(', '))%></div>
+           <% end%>
+         </td>
+       </tr>
     <% end %>
   </tbody>
 </table>
