Update family member save error message

--- a/app/views/insured/family_members/_dependent_form.html.erb
+++ b/app/views/insured/family_members/_dependent_form.html.erb
@@ -10,7 +10,7 @@
       <% if dependent.errors.any? %>
         <div class="alert alert-error">
           <h4>
-            <%= "#{pluralize(@dependent.errors.size, "error")} prohibited this family member from being saved:" %>
+            <%= "Correct the following to add this family member:" %>
           </h4>
           <ul>
             <% dependent.errors.full_messages.each do |msg| %>
