--- a/app/views/insured/family_members/_dependent_resident_form.html.erb
+++ b/app/views/insured/family_members/_dependent_resident_form.html.erb
@@ -6,7 +6,7 @@
       <% if dependent.errors.any? %>
         <div class="alert alert-error">
           <h4>
-            <%= "#{pluralize(@dependent.errors.size, "error")} prohibited this family member from being saved:" %>
+            <%= "Correct the following to add this family member:" %>
           </h4>
           <ul>
             <% dependent.errors.full_messages.each do |msg| %>
@@ -15,7 +15,7 @@
           </ul>
         </div>
       <% end %>
-      
+
       <p class="dependent-invalid-dob"></p>
       <% if @address_errors.present? %>
         <%= render partial: 'shared/address_error_messages', locals: {address_errors: @address_errors} %>
