--- a/app/views/ui-components/v1/navs/_manage_account.html.slim
+++ b/app/views/ui-components/v1/navs/_manage_account.html.slim
@@ -1,7 +1,7 @@
 nav
   ul#uic-families-right-menu
     li
-      = link_to 'Home', '#'
+      = link_to 'Home', main_app.manage_account_person_path(id: current_user&.person.id)
     li
       = link_to 'Personal Info', main_app.personal_info_person_path(id: current_user&.person&.id)
     li
