--- a/app/views/exchanges/bulk_notices/preview.html.erb
+++ b/app/views/exchanges/bulk_notices/preview.html.erb
@@ -43,7 +43,7 @@
                 <%= f.hidden_field "documents_attributes][#{i}][_destroy", value: 'false' %>
               </div>
             <% end %>
-            <%= file_field_tag "file", type: :file, accept: 'image/png,image/jpeg,application/pdf', class: "doc-upload-file" %>
+            <%= file_field_tag "file", type: :file, accept: 'image/png,image/jpeg,application/pdf', class: @bulk_notice.documents.empty? ? "doc-upload-file" : "doc-upload-file d-none" %>
           </td>
         </tr>
       </tbody>
