--- a/app/views/exchanges/bulk_notices/_recipient_badge.html.erb
+++ b/app/views/exchanges/bulk_notices/_recipient_badge.html.erb
@@ -1,6 +1,6 @@
 <span class="badge badge-secondary mr-1 mb-1 p-2" data-target="bulk-notice.recipientBadge">
   <%= hidden_field_tag 'admin_bulk_notice[audience_ids][]', id %>
-  <%= legal_name %>
+  <%= hbx_id %>
   <a data-action='bulk-notice#deleteIdentifier' class='text-white' href>
     <i class="far fa-times-circle"></i>
   </a>
