--- a/app/views/exchanges/bulk_notices/new.html.erb
+++ b/app/views/exchanges/bulk_notices/new.html.erb
@@ -11,8 +11,13 @@
       <tbody>
         <tr>
           <th style="text-transform: capitalize;">Recipients:</th>
-          <td data-target="bulk-notice.recipientList">
-            <div id='recipient-list'></div>
+          <td>
+            <div id='recipient-list' class='collapsed float-left' data-target="bulk-notice.recipientList"></div>
+            <div id='more-receipients' class='float-right pr-1'>
+              <a href data-target="bulk-notice.moreRecipients" data-action='bulk-notice#expandRecipients' class='d-none'>0 more...</a>
+              <a href data-target="bulk-notice.lessRecipients" data-action='bulk-notice#collapseRecipients' class='d-none'>Less...</a>
+            </div>
+
             <%= f.text_area :audience_identifiers, rows: 1, data: { reflex: 'blur->BulkNotice#new_identifier' }, placeholder: 'FEINs or HBX IDs, comma separated', id: 'bulk-notice-audience-identifiers' %>
           </td>
         </tr>
