Add confirmation to send

--- a/app/views/exchanges/bulk_notices/preview.html.erb
+++ b/app/views/exchanges/bulk_notices/preview.html.erb
@@ -56,6 +56,6 @@
       </tbody>
     </table>
 
-    <%= f.submit "Send", class: 'btn btn-alt-blue col-2 offset-10' %>
+    <%= f.submit "Send", class: 'btn btn-alt-blue col-2 offset-10', data: { confirm: 'Are you sure?' } %>
   <% end %>
 </div>
