Update reflex spec

--- a/app/views/exchanges/bulk_notices/new.html.erb
+++ b/app/views/exchanges/bulk_notices/new.html.erb
@@ -35,7 +35,9 @@
         </tr>
       </tbody>
     </table>
-
+    <div class='form-group'>
+    <%= link_to 'Back', exchanges_bulk_notices_path, class: 'btn btn-outline-primary col-2' %>
     <%= f.submit "Preview", class: 'btn btn-alt-blue col-2 offset-10' %>
+    </div>
   <% end %>
 </div>
